# binhtran432k.github.io

./: .editorconfig  .gitignore  Cargo.toml  README.md  bun.lockb  declaration.d.ts  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  gh-page.yml  release.yml
icomoon/: binhtran432k.json
public/: manifest.json
scripts/: background.ts  preview.ts  server.ts  ssg.ts
src/: error_views.rs  global.css  icons.ts  index.ts  main.rs  profile.ts
src/components/: about.ts  async-css.ts  async-font.ts  background.ts  contact.ts  cool_link.rs  eye-button.ts  footer.ts  github-profile.ts  header.rs  header.ts  intro.rs  intro.ts  landing.rs  layout.rs  loader.rs  mod.rs  project.ts  scroll_down.rs  seo.rs  skill.ts  social.rs  social.ts  social_link.rs  undercurl.ts
src/icons/: waving-hand.ts
src/layouts/: error.rs  index.rs
src/pages/: 404.ts  contact-success.ts  cv.ts  landing.ts  resume.ts
src/routes/: 404.tsx  index.tsx
src/sass/: base.scss
src/scripts/: cool-cursor.ts  header.ts  landing.ts  scrolling.ts
src/shaders/: hover-fragment.shader  hover-vertex.shader
src/sharders/: hover-fragment.glsl  hover-vertex.glsl
src/styles/: cool-button.css  core-header.css  core-landing.css  core.css  cv.css  eye-button.css  footer.css  header.css  icon.css  landing.css  lazy-landing.css  resume.css  undercurl.css
src/templates/: index.rs
src/utils/: background-effect.ts  cool-background.ts  core.ts  css.ts  hover-effect.ts  minify.ts  profile.ts  three-util.ts  webgl.ts
static/sass/: _variables.scss  base.scss  cool-item.scss  (+3 more)
(+31 files in other folders)
