[package]
name = "binhtran432k-portfolio"
version = "0.1.0"
edition = "2021"
description = "The official website of Binh Duc Tran."
authors = ["Binh Tran <binhtran432k@gmail.com>"]
license = "MIT"
repository = "https://github.com/binhtran432k/binhtran432k.github.io"
homepage = "https://binhtran432k.com"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2" }
sycamore = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]
lol_alloc = "0.4.1"
